update get product by id
